Grace/tests/gibbs/errors/t251.grace
// ERROR = P1018
if(false) then {
}
elseif(true) then {
